--- a/brewer/src/main/resources/messages.properties
+++ b/brewer/src/main/resources/messages.properties
@@ -1,3 +1,4 @@
 typeMismatch.java.time.LocalDate={0} inv\u00E1lida
 
-usuario.dataNascimento=Data de nascimento
+venda.cadastro.titulo=New order
+venda.edicao.titulo=Editing order #{0}
