--- a/brewer/src/main/resources/messages.properties
+++ b/brewer/src/main/resources/messages.properties
@@ -2,3 +2,9 @@ typeMismatch.java.time.LocalDate={0} inv\u00E1lida
 
 venda.cadastro.titulo=New order
 venda.edicao.titulo=Editing order #{0}
+
+org.hibernate.validator.constraints.NotBlank.message={0} is mandatory
+com.algaworks.constraints.SKU.message={0} should be filled correclty (example: XX9999)
+
+cerveja.sku=SKU
+cerveja.nome=Name
