--- a/brewer/src/main/resources/messages_pt_BR.properties
+++ b/brewer/src/main/resources/messages_pt_BR.properties
@@ -4,3 +4,9 @@ usuario.dataNascimento=Data de nascimento
 
 venda.cadastro.titulo=Cadastro de vendas
 venda.edicao.titulo=Edi\u00E7\u00E3o da venda n\u00B0 {0}
+
+org.hibernate.validator.constraints.NotBlank.message={0} \u00E9 obrigat\u00F3rio
+com.algaworks.constraints.SKU.message={0} deve ser informado no formato correto (exemplo: XX9999)
+
+cerveja.sku=SKU
+cerveja.nome=Nome
